--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -1,3 +1,11 @@
+/*
+
+Reflux Template
+
+https://templatemo.com/tm-531-reflux
+
+*/
+
 @import url(fontawesome.css);
 @import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
 body {
@@ -132,7 +140,7 @@ html {
     height: 140px;
     border-radius: 50%;
     text-align: center;
-    box-shadow: 0 0 20px 0px rgba(63, 47, 47, 0.65);
+    box-shadow: 0 0 20px 0px rgb(63 47 47 / 65%);
 }
 
 .menu .author-content {
@@ -213,25 +221,24 @@ html {
 }
 
 .menu {
-
     left: 10%;
-    -webkit-transition: 233ms cubic-bezier(0, 0, 0.21, 1);
-    -webkit-overflow-scrolling: touch;
-    background-color: #a43f49;
-    box-sizing: border-box;
-    height: 100vh;  
-    max-height: 100vh !important;
-    max-width: 80vw !important;
-    min-width: 45px !important;
-    outline: none;
-    overflow-x: hidden !important;
-    overflow-y: auto !important;
-    padding: 0;
-    position: fixed !important;
-    top: calc(0px);  
-    width: 20%;
-    will-change: transform;
-    z-index: 9999 !important;
+  -webkit-transition: -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
+  -webkit-overflow-scrolling: touch;
+  background-color: #a43f49;
+  box-sizing: border-box;
+  height: 100vh;  
+  max-height: 100vh !important;
+  max-width: 80vw !important;
+  min-width: 45px !important;
+  outline: none;
+  overflow-x: hidden !important;
+  overflow-y: auto !important;
+  padding: 0;
+  position: fixed !important;
+  top: calc(0px);  
+  width: 20%;
+  will-change: transform;
+  z-index: 9999 !important;
 }
 
 .menu-toggle {
