--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -1,11 +1,10 @@
-/*
 
-Reflux Template
 
-https://templatemo.com/tm-531-reflux
-
-*/
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 @import url(fontawesome.css);
 @import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
 body {
