--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -635,7 +635,7 @@ section.contact-me {
     border-bottom: none;
 }
 
-#contact input {
+#my-form input {
     background-color: rgba(250,250,250,0.1);
     border: 1px solid rgba(250,250,250,1);
     border-radius: 0px;
@@ -648,12 +648,12 @@ section.contact-me {
     padding-left: 15px;
 }
 
-#contact input:focus {
+#my-form input:focus {
     outline: none;
     box-shadow: none;
 }
 
-#contact textarea {
+#my-form textarea {
     background-color: rgba(250,250,250,0.1);
     border: 1px solid rgba(250,250,250,1);
     border-radius: 0px;
@@ -667,15 +667,38 @@ section.contact-me {
     padding-left: 15px;
 }
 
-#contact textarea:focus {
+#my-form textarea:focus {
     outline: none;
     box-shadow: none;
 }
 
-#contact {
+#my-form {
     text-align: center;
 }
 
+#status{
+    width: 90%;
+    max-width: 500px;
+    text-align: center;
+    padding: 3px;
+    margin: 13px auto;
+    border-radius: 8px;
+}
+
+@keyframes status{
+    0%{
+        opacity: 1;
+        pointer-events: all;
+    }
+    90%{
+        opacity: 1;
+        pointer-events: all;
+    }
+    100%{
+        opacity: 0;
+        pointer-events: none;
+    }
+}
 @media screen and (max-width: 1680px) {
     .menu {
         left: 5%;
