--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -537,6 +537,25 @@ section.my-work .section-heading {
     border-radius: 5px;
 }
 
+.video {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.isotope-item .video {
+    top: 0;
+    left: 50;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    margin-left: 83px;
+}
+
+
+
 .lazyload {
     background: #f7f7f7;
 }
@@ -710,6 +729,11 @@ section.contact-me {
         right: 5%;
         left: 30%;
     }
+
+    .isotope-item .video {
+        margin-left: 0;
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 1680px) and (min-width: 846px) { 
@@ -725,6 +749,10 @@ section.contact-me {
 
     .menu .image {
         margin-top: 60px;
+    }
+    .isotope-item .video {
+        border-radius: none;
+        text-align: center;
     }
 }
 
@@ -746,6 +774,11 @@ section.contact-me {
     .right-image-post .white-button,
     .left-image-post .white-button {
         margin-top: 25px;
+    }
+
+    .isotope-item .video {
+        border-radius: none;
+        text-align: center;
     }
 
 }
@@ -829,5 +862,10 @@ section.contact-me {
     }
     .isotope-toolbar {
         margin-bottom: 20px;
+    }
+
+    .isotope-item .video {
+        border-radius: none;
+        text-align: center;
     }
 }
