--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -404,6 +404,20 @@ button:hover {
     transition: all 0.5s;
 }
 
+.service-item-resume{
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding: 50px;
+    background-color: rgba(250, 250, 250, 0.1);
+    transition: all 0.5s;
+    display: flex;
+}
+.service-item-resume button{
+    position: relative;
+    left: 71%;
+}
+
+
 .service-item h4 {
     transition: all 0.5s;
 }
@@ -780,6 +794,10 @@ section.contact-me {
         border-radius: none;
         text-align: center;
     }
+    .service-item-resume button{
+        position: relative;
+        left: 60%;
+    }
 
 }
 
@@ -798,6 +816,13 @@ section.contact-me {
 #menu-close {
     display: none;
 }  
+
+@media screen and (max-width: 1040px){
+    .service-item-resume button{
+        position: relative;
+        left: 40%;
+    }
+}
 
 @media screen and (max-width: 845px) {        
     #menu-toggle,
@@ -867,5 +892,26 @@ section.contact-me {
     .isotope-item .video {
         border-radius: none;
         text-align: center;
+    }
+
+    .service-item-resume button{
+        position: relative;
+        left: 15%;
+    }
+}
+
+@media screen and (max-width: 300px){
+
+    .service-item-resume{
+        margin-top: 20px;
+        margin-bottom: 10px;
+        padding: 20px 10px;
+        background-color: rgba(250, 250, 250, 0.1);
+        transition: all 0.5s;
+        display: flex;
+    }
+    .service-item-resume button{
+        position: relative;
+        left: 2px;
     }
 }
